fixed navbar on mobile

--- a/src/styling/home.scss
+++ b/src/styling/home.scss
@@ -16,7 +16,7 @@ html {
 }
 
 .b-example-divider {
-	height: 3rem;
+	height: 1.5rem;
 	background-color: rgba(0, 0, 0, 0.1);
 	border: solid rgba(0, 0, 0, 0.15);
 	border-width: 1px 0;
